# version 4.1

- get_values_ml() returns the name of the attribute (instead of "value" as the name of the column with the values)
- get_values_ml() and set_values_ml() require a DataFrame also for actors

# version 4.0.1

- rewritten as.igraph to remove dependency on igraph's ability to read graphml files
- modified is_directed_ml not to process pairs of layers that have not been initialised (it used to return a warning)

# version 4.0

- the multilayer network data structure has been re-implemented using multilayer cubes
- actors must exist on at least one layer
- removed actor Pucci from florentine data, not being present in any layer
- improved efficiency of functions returning dataframes
- removed functions deprecated since versions 3.0 and 3.1

# version 3.3.2

- new default behavior: loops are allowed
- added generate_communities_ml, to create simple community structures
- added flat_ec_ml, flat_nw_ml and mdlp_ml clustering algorithms
- added nmi_ml and omega_index_ml evaluation functions

# version 3.3.1

- no significant change (code fix for CRAN compatibility)

# version 3.3

- added some argument checks to plot_ml
- added option to print layer names inside each frame in plotting
- updated plot colors (default black for vertices) and added edge transparency
- added support for edge-by-edge style
- now add_vertices and add_edges automatically add actors and layers if they do not exist.  Layers are by default undirected.
- added a more efficient implementation of glouvain, now available as glouvain2.
- added back project_ml, only performing clique (i.e., unweighted) projections.
- fixed bug in write_ml (missing comma before "LOOP" keyword)

# version 3.2

- add_edges_ml now automatically adds the corresponding actors and vertices if they do not exist
- added support for global edge attributes in addition to local (layer-specific) edge attributes
- added support for loops in input files