@@ -2,11 +2,11 @@ Package: multinet
 Type: Package
 Title: Analysis and Mining of Multilayer Social Networks
 Version: 4.1
-Date: 2022-01-04
+Date: 2022-09-05
 Authors@R: c(person("Matteo", "Magnani", role = c("aut", "cre"), email = "matteo.magnani@it.uu.se"), person("Luca", "Rossi", role = "aut", comment="API design"), person("Davide", "Vega", role = "aut", comment="API and code design"), person("Obaida", "Hanteer", role = "ctb", comment="mdlpa, flat_ec, flat_nw, some community evaluation functions"))
 Maintainer: Matteo Magnani <matteo.magnani@it.uu.se>
 Description: Functions for the creation/generation and analysis of multilayer social networks <doi:10.18637/jss.v098.i08>.
-License: GPL
+License: apache 2.0
 Depends: igraph (>= 1.2), Rcpp (>= 1.0), methods, RColorBrewer
 LinkingTo: Rcpp
 RcppModules: multinet
