@@ -1,5 +1,7 @@
 # version 4.1
 
+- new license (Apache 2.0)
+- fixed bug in summary function
 - get_values_ml() returns the name of the attribute (instead of "value" as the name of the column with the values)
 - get_values_ml() and set_values_ml() require a DataFrame also for actors
 
